[package]
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "gl-typed"
version = "0.1.0"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[features]
default = []

[dependencies]
bitflags = "1.0.4"

[build-dependencies]
gl_generator = "0.10.0"
heck = "0.3.1"

[dev-dependencies]
glutin = "0.19.0"
